Add necessary files.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name":"@bricksphd/tiny",
-  "version":"0.0.1"
+  "version":"0.0.1",
+  "description":"A trivial package that tests pushing to npm",
+  "license":"MIT",
+  "repository":"bricksphd/tiny",
+  "main":"index.js",
+  "keywords":[
+    "npm"
+  ]
 }
